# hcat

./: README.md  hcat.cabal
src/: ConduitUtil.hs  Main.hs  MainConduit.hs
