cabal-version: 1.12

name:           hcat
version:        0.1.0.0
description:    Reimplementation of linux cat command line utility in haskell
homepage:       https://github.com/fromjavatohaskell/hcat#readme
bug-reports:    https://github.com/fromjavatohaskell/hcat/issues
author:         FromJavaToHaskell
maintainer:     fromjavatohaskell@gmail.com
copyright:      2018 FromJavaToHaskell
license:        MIT
license-file:   LICENSE-MIT
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/fromjavatohaskell/hcat

executable hcat
  main-is: Main.hs
  hs-source-dirs:
      src
  -- ghc-options: -threaded -rtsopts -O2 -Wall -Wextra -prof -fforce-recomp -ddump-simpl -dsuppress-all -dno-suppress-type-signatures -ddump-asm -ddump-cmm
  ghc-options: -rtsopts -O2 -Wall -Wextra -fforce-recomp -prof
  build-depends:
      base, unix
  default-language: Haskell2010
